# tef-headless-tuner

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.zh-CN.md  eim_config.toml  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-control-plane-hardening/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md
.planning/quick/260420-syi-fix-wifi-header-fields-are-too-long-by-i/: TASK.md
components/tef6686/: CMakeLists.txt  Kconfig.projbuild  tef6686.c  tef6686.h  tef6686_patch_v102.h  tef6686_patch_v205.h
components/tuner_frontend/: CMakeLists.txt  Kconfig.projbuild  audio.c  audio.h  rds_decode.c  rds_decode.h  tuner_controller.c  tuner_controller.h  tusb_config.h  usb_audio_desc.h
docs/: audio-streaming-design.md  wifi-web-control-design.md  项目设计.md
host/: tef_control.py
main/: CMakeLists.txt  Kconfig.projbuild  app_settings.c  app_settings.h  cmd_handler.c  cmd_handler.h  idf_component.yml  main.c  usb_cdc.c  usb_cdc.h  usb_descriptors.c  usb_descriptors.h  version.h.in  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h  xdr_server.c  xdr_server.h
main/html/: index.html  system.html  wifi.html
